<resources>
    <string name="app_name">CyclingWorkoutApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cycling Workout App</string>
    <string name="nav_header_subtitle">Group 1 (UI)</string>
    <string name="nav_header_desc">Placeholder</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_workout">Workout</string>
    <string name="menu_settings">Settings</string>

    <string name="default_distance_value">0.000</string>
    <string name="default_duration_value">00:00:00</string>
    <string name="default_elevation_value">0</string>
    <string name="default_pace_value">00:00:00</string>
    <string name="distance_title">Distance (mi)</string>
    <string name="duration_title">Duration</string>
    <string name="elevation_title">Elevation (ft)</string>
    <string name="pace_title">Pace avg. (min/ mi)</string>

    <string name="button_start_stop">Start</string>

    <string name="button_stop">Stop</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Stop</string>
    <string name="button_settings">Settings</string>

    <string name="auto_pause_enable">Auto Pause Enable</string>
    <string name="count_down_speed">Count Down Speed</string>
    <string name="count_down_speed_faster">Fast</string>>
    <string name="count_down_speed_normal">Normal</string>>
    <string name="count_down_speed_slower">Slow</string>>
    <array
        name="count_down_speed_option">
        <item>@string/count_down_speed_faster</item>
        <item>@string/count_down_speed_normal</item>
        <item>@string/count_down_speed_slower</item>
    </array>
    <string name="text_to_speech">Text to Speech</string>>
    <string name="unit_measurement">Unit Measurement</string>>
    <string name="unit_measurement_metric">Metric (km)</string>>
    <string name="unit_measurement_imperial">Imperial (miles)</string>> ing>>
    <array
        name="unit_measurement_option">
        <item>@string/unit_measurement_metric</item>
        <item>@string/unit_measurement_imperial</item>
    </array>
    <string name="dark_mode_enable">Dark Mode Enable</string>>
</resources>