<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workout.WorkoutFragment">

    <TextView
        android:id="@+id/text_workout"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_workout">

        <TextView
            android:id="@+id/text_distanceCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_distance_value"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/text_distanceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            android:textAlignment="center"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_durationCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_duration_value"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/text_elevationCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_elevation_value"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/text_paceCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_pace_value"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_durationTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/duration_title"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_elevationTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/elevation_title"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_paceTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pace_title"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/progressOutput"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_start_stop"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_Start_Stop"
            android:text="@string/button_start_stop" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_settings"
            android:text="@string/button_settings" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_pause" />
    </LinearLayout>

    <TextView
        android:layout_height="92dp"
        android:layout_width="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32dp"
        android:id="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginBottom="156dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
